# hbf

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  AGENTS.md  BUILD.bazel  CLAUDE.md  COMPLETION_GUIDE.md  DEMO_STATUS.md  HBF_SUCCESS_REPORT.md  MODULE.bazel  Makefile  README.md  RENOVATE_SETUP.md  RENOVATE_STATUS.md  USAGE.md  WORKSPACE  adr_artifact-format-metadata.md  adr_integrate-meta-repo-pinned.md  agent_help.md  big_idea.md  claude_build_update.md  dagger.json  db_plan.md  demo_00_specification.md  demo_01_hbf_impl.md  demo_02_examplecpp_impl.md  demo_03_examplepy_impl.md  demo_examplecpp_impl.md  demo_examplepy_impl.md  demo_hbf_impl.md  demo_specification.md  design.md  dev_mode_removal.md  go.mod  go.sum  hbf  hbf_impl.md  hbf_simple.md  hypermedia-impl-phase1.md  (+17 more)
.claude/: settings.local.json
.claude/skills/add-pod/: SKILL.md
.claude/skills/add-pod/templates/: fs_build_test.sh  pod_build_template.bazel  server_template.js
.claude/skills/benchmark/: EXAMPLES.md  README.md  SKILL.md  SUMMARY.md  benchmark.sh  show_results.sh
.claude/skills/benchmark/lib/: db.sh  parser.sh  server.sh
.claude/skills/c99-code-review/: COMPILER_FLAGS.md  LICENSES.md  SKILL.md  STYLE_GUIDE.md
.dagger/: go.mod  main.go
.devcontainer/: .dockerignore  Dockerfile  README.md  devcontainer.json
.github/: renovate-simple.json  renovate.json
.github/actions/build-full/: action.yml
.github/actions/build-pod/: action.yml
.github/actions/manual-cached/: action.yml
.github/workflows/: integration-ci.yml  manual-component-update.yml  manual-renovate-trigger.yml  pr-keyed-cache.yml  pr.yml  release.yml  renovate-test.yml  renovate.yml
DOCS/: README.md  SUMMARY.md  asset_mgmt_migration.md  big_idea.md  coding-standards.md  custom_content.md  development-setup.md  hbf_infra.md  hbf_next.md  hbf_spec.md  hbf_spec_next.md  hypermedia-fragments.md  hypermedia-sqlgraph.md  hypermedia-user-story.md  phase0-1-plan.md  phase0-completion.md  phase1-completion.md  phase2-overlay-plan.md  phase2b-completion.md  phase3.md  pool_removal.md  quickjs_engine.md  revised_phase3_plan.md  schema_doc_graph.md
bazel/oci/: install_packages.sh
cmd/hbf/: BUILD.bazel  main.go
demo/: BUILD.bazel  cpp_integration_test.cc
fs/: BUILD.bazel  fs_build_test.sh
fs/hbf/: server.js
fs/static/: index.html
fs/static/dev/: index.html
go/neovim/: BUILD.bazel  main.go
hbf/: .gitignore  app.go  go.mod  go.sum  main.go  phase1.md  phase2.md  plan.md  terminal.go  wails-build.sh  wails.json
hbf-setup-dagger/: Makefile
hbf/db/: BUILD.bazel  assets_placeholder.c  db.c  db.h  db_test.c  migrate.c  migrate.h  overlay_fs.c  overlay_fs.h  overlay_fs_test.c  overlay_schema.sql  overlay_test.c
hbf/frontend/: index.html  package-lock.json
hbf/frontend/src/: main.js  terminal.js
hbf/frontend/wailsjs/go/main/: App.d.ts  App.js
hbf/http/: BUILD.bazel  handler.c  handler.h  server.c  server.h  server_test.c
hbf/qjs/: BUILD.bazel  console_module.c  console_module.h  db_module.c  db_module.h  engine.c  engine.h  engine_test.c  module_loader.c  module_loader.h  stack_overflow_test.c
hbf/qjs/bindings/: request.c  request.h  response.c  response.h
hbf/shell/: BUILD.bazel  config.c  config.h  config_test.c  hash.h  hash_test.c  log.c  main.c
hbf_simple/: BUILD.bazel  http_bridge.c  http_bridge.h  main.c  qjs_runner.c  qjs_runner.h  server_js.h
internal/api/: BUILD.bazel
internal/auth/: BUILD.bazel
internal/authz/: BUILD.bazel
internal/core/: BUILD.bazel  config.c  config.h  config_test.c  hash.c  log.c  log.h  main.c
internal/db/: BUILD.bazel  db.c  db.h  db_test.c  overlay_schema.sql  overlay_test.c  schema.c  schema.h  schema.sql  schema_test.c
internal/document/: BUILD.bazel
internal/errors/: BUILD.bazel  errors.go
internal/henv/: BUILD.bazel  manager.c  manager.h  manager_test.c
internal/http/: BUILD.bazel  handler.c  handler.h  handler_test.c  server.c  server.h
internal/input/: BUILD.bazel  handler.go
internal/log/: BUILD.bazel  log.go  log_test.go
internal/nvim/: BUILD.bazel  client.go  client_test.go
internal/qjs/: BUILD.bazel  console_module.c  db_module.c  engine.c  engine.h  engine_test.c  loader.c  loader.h  loader_test.c  modules.c  modules.h  pool.c  pool.h  pool_test.c  router_test.c  stack_overflow_test.c
internal/qjs/bindings/: request.c  response.c  response.h
internal/render/: BUILD.bazel  renderer.go
internal/templates/: BUILD.bazel
internal/ui/: BUILD.bazel  state.go
internal/ws/: BUILD.bazel
scripts/: dagger.sh  test-load-projects.sh
static/: BUILD.bazel  server.js
static-server/: BUILD.bazel  index.html  register_with_traefik.sh  start_server.sh  style.css
static/lib/: BUILD.bazel  router.js
static/www/: BUILD.bazel  index.html  style.css
test/: BUILD.bazel  test_sdl2.c  test_sdl2_simple.c
tools/: BUILD.bazel  README_integration_test.md  asset_packer.c  asset_packer_deterministic_test.sh  db_to_c.sh  hbf_simple_benchmark.sh  hbf_simple_integration.sh  inject_content.sh  integration_endpoints_200.txt  integration_endpoints_403.txt  integration_endpoints_404.txt  integration_test.sh  integration_test_runner.sh  js_to_c.sh  lint.sh  list_files.sh  npm_vendor.sh  pod_binary.bzl  sql_to_c.sh  static_file_test.sh  test_qjs.c
traefik/: BUILD.bazel  README.md  start_traefik.sh  traefik.yml
