# HBF - Web Compute Environment
# Root build file

load("//tools:pod_binary.bzl", "pod_binary")

# ============================================================================
# Pod Binaries
# ============================================================================

# Base pod (default binary)
pod_binary(
    name = "hbf",
    pod = "//pods/base",
    visibility = ["//visibility:public"],
    tags = ["hbf_pod"],
    strip = True,
    optimize = True,
    lto = True,
)

# Test pod
pod_binary(
    name = "hbf_test",
    pod = "//pods/test",
    visibility = ["//visibility:public"],
    tags = ["hbf_pod"],
    strip = False,
    optimize = True,
    lto = False,
)

# ============================================================================
# Utility Targets
# ============================================================================

# Lint target
alias(
    name = "lint",
    actual = "//tools:lint",
    visibility = ["//visibility:public"],
)
