# HBF - Web Compute Environment
# Root build file

load("//tools:pod_binary.bzl", "pod_binary")

# ============================================================================
# Pod Binaries
# ============================================================================

# Base pod (default binary)
pod_binary(
    name = "hbf",
    lto = True,
    optimize = True,
    pod = "//pods/base",
    strip = True,
    tags = ["hbf_pod"],
    visibility = ["//visibility:public"],
)

# Test pod
pod_binary(
    name = "hbf_test",
    lto = False,
    optimize = True,
    pod = "//pods/test",
    strip = False,
    tags = ["hbf_pod"],
    visibility = ["//visibility:public"],
)

# ============================================================================
# Utility Targets
# ============================================================================

# Lint target
alias(
    name = "lint",
    actual = "//tools:lint",
    visibility = ["//visibility:public"],
)
