# HBF - Web Compute Environment
# Root build file

# ============================================================================
# Main Binary (Phase 0: Hypermedia)
# ============================================================================

# Binary target (alias to bin/hbf)
alias(
    name = "hbf",
    actual = "//bin:hbf",
    visibility = ["//visibility:public"],
)

# ============================================================================
# Utility Targets
# ============================================================================

# Lint target
alias(
    name = "lint",
    actual = "//tools:lint",
    visibility = ["//visibility:public"],
)
