"""
HBF - Web Compute Environment
Bazel module configuration (bzlmod)
"""

module(
    name = "hbf",
    version = "0.1.1",
)

# Bazel rules for C/C++ compilation
bazel_dep(name = "rules_cc", version = "0.1.1")

# Platform support
bazel_dep(name = "platforms", version = "1.0.0")

# Musl toolchain for 100% static linking (no glibc)
# This automatically enables fully_static_link feature
bazel_dep(name = "toolchains_musl", version = "0.1.27", dev_dependency = True)

# Use musl toolchains extension
musl = use_extension("@toolchains_musl//:toolchains_musl.bzl", "toolchains_musl", dev_dependency = True)
use_repo(musl, "musl_toolchains_hub")
register_toolchains("@musl_toolchains_hub//:all")

# SQLite3 database (from Bazel Central Registry)
bazel_dep(name = "sqlite3", version = "3.50.4")

# zlib compression library (from Bazel Central Registry)
bazel_dep(name = "zlib", version = "1.3.1.bcr.7")

# CivetWeb HTTP server library (fetched from git)
git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "civetweb",
    remote = "https://github.com/civetweb/civetweb.git",
    tag = "v1.16",
    build_file = "//third_party/civetweb:civetweb.BUILD",
)

# QuickJS-NG JavaScript engine (MIT license)
git_repository(
    name = "quickjs-ng",
    remote = "https://github.com/quickjs-ng/quickjs.git",
    tag = "v0.8.0",
    build_file = "//third_party/quickjs-ng:quickjs.BUILD",
)

# HTTP archive support for fetching third-party web assets
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# HTMX - Hypermedia-driven web framework (MIT license)
# Version: 2.0.3 (latest stable)
http_file(
    name = "htmx",
    url = "https://unpkg.com/htmx.org@2.0.3/dist/htmx.min.js",
    sha256 = "491955cd1810747d7d7b9ccb936400afb760e06d25d53e4572b64b6563b2784e",
    downloaded_file_path = "htmx.min.js",
)

# Monaco Editor - VS Code's text editor (MIT license)
# Version: 0.52.0 (latest stable)
# Note: Fetching pre-built 'min' distribution from npm registry
http_archive(
    name = "monaco_editor",
    url = "https://registry.npmjs.org/monaco-editor/-/monaco-editor-0.52.0.tgz",
    sha256 = "5dbda58750b13452de39affcea703af096022d8e3546c67ed5d3bd072763f939",
    strip_prefix = "package",
    build_file_content = """
filegroup(
    name = "min_vs",
    srcs = glob(["min/vs/**/*"]),
    visibility = ["//visibility:public"],
)
    """,
)
