"""
HBF - Web Compute Environment
Bazel module configuration (bzlmod)
"""

module(
    name = "hbf",
    version = "0.1.1",
)

# Bazel rules for C/C++ compilation
bazel_dep(name = "rules_cc", version = "0.1.1")

# Platform support
bazel_dep(name = "platforms", version = "1.0.0")

# Musl toolchain for 100% static linking (no glibc)
# This automatically enables fully_static_link feature
bazel_dep(name = "toolchains_musl", version = "0.1.27", dev_dependency = True)

# Use musl toolchains extension
musl = use_extension("@toolchains_musl//:toolchains_musl.bzl", "toolchains_musl", dev_dependency = True)
use_repo(musl, "musl_toolchains_hub")
register_toolchains("@musl_toolchains_hub//:all")

# SQLite3 database (from Bazel Central Registry)
bazel_dep(name = "sqlite3", version = "3.50.4")

# zlib compression library (from Bazel Central Registry)
bazel_dep(name = "zlib", version = "1.3.1.bcr.7")

# libhttp (Embedded Web Server) HTTP server library (fetched from git)
# MIT licensed replacement for CivetWeb
git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "libhttp",
    remote = "https://github.com/lammertb/libhttp.git",
    commit = "652e2531b23e8f8f5d54e8be5ddb8ca21e68c1d6",  # HEAD as of 2025-11-11
    build_file = "//third_party/ews:libhttp.BUILD",
    patch_cmds = [
        "cat > httplib_set_thread_name_stub.c << 'EOF'\n/* Stub for buggy httplib_set_thread_name function in upstream libhttp */\nvoid XX_httplib_set_thread_name(const char *name) {\n\t/* No-op stub - thread naming not critical */\n\t(void)name;\n}\nEOF",
    ],
)

# QuickJS-NG JavaScript engine (MIT license)
git_repository(
    name = "quickjs-ng",
    remote = "https://github.com/quickjs-ng/quickjs.git",
    tag = "v0.8.0",
    build_file = "//third_party/quickjs-ng:quickjs.BUILD",
)

# miniz - Single-file public domain deflate/inflate, zlib-subset (Public Domain/Unlicense)
git_repository(
    name = "miniz",
    remote = "https://github.com/richgel999/miniz.git",
    tag = "3.0.2",
    build_file = "//third_party/miniz:miniz.BUILD",
)

# HTTP archive support for fetching third-party web assets
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# HTMX - Hypermedia-driven web framework (MIT license)
# Version: 2.0.3 (latest stable)
http_file(
    name = "htmx",
    url = "https://unpkg.com/htmx.org@2.0.3/dist/htmx.min.js",
    sha256 = "491955cd1810747d7d7b9ccb936400afb760e06d25d53e4572b64b6563b2784e",
    downloaded_file_path = "htmx.min.js",
)

# Monaco Editor - VS Code's text editor (MIT license)
# Version: 0.52.0 (latest stable)
# Note: Fetching pre-built 'min' distribution from npm registry
# REMOVED DUE TO SIZE CONCERNS
# http_archive(
#     name = "monaco_editor",
#     url = "https://registry.npmjs.org/monaco-editor/-/monaco-editor-0.52.0.tgz",
#     sha256 = "5dbda58750b13452de39affcea703af096022d8e3546c67ed5d3bd072763f939",
#     strip_prefix = "package",
#     build_file_content = """
# filegroup(
#     name = "min_vs",
#     srcs = glob(["min/vs/**/*"]),
#     visibility = ["//visibility:public"],
# )
#     """,
# )

# find-my-way router (MIT license) is located in third_party/find-my-way
# Pre-bundled to ESM for QuickJS compatibility
# Version: 9.3.0

# CodeMirror 6 (MIT license) is located in third_party/codemirror
# Pre-bundled from @codemirror/view@6.25.0 with dependencies
# Includes: @codemirror/state, @marijn/find-cluster-break, style-mod, w3c-keyname
# Version: 6.25.0
