# HBF Simple: Minimal QuickJS HTTP Server
# Stripped-down variant to isolate QuickJS runtime integration issues

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

# Embed server.js as C byte array
genrule(
    name = "embed_server_js",
    srcs = ["//static:server.js"],
    outs = ["server_js.c", "server_js.h"],
    cmd = "$(location //tools:js_to_c.sh) $(location //static:server.js) $(location server_js.c) $(location server_js.h)",
    tools = ["//tools:js_to_c.sh"],
)

# HTTP bridge library
cc_library(
    name = "http_bridge",
    srcs = ["http_bridge.c"],
    hdrs = ["http_bridge.h"],
    deps = [
        "@civetweb//:civetweb",
        "//internal/core:log",
    ],
    copts = [
        "-std=c99",
        "-Wall",
        "-Wextra",
        "-Werror",
        "-Wpedantic",
    ],
)
    
# QuickJS runner library
cc_library(
    name = "qjs_runner",
    srcs = [
        "qjs_runner.c",
        ":embed_server_js",
    ],
    hdrs = [
        "qjs_runner.h",
        ":embed_server_js",
    ],
    deps = [
        ":http_bridge",
        "@quickjs-ng//:quickjs",
        "//internal/core:log",
    ],
    copts = [
        "-std=c99",
        "-Wall",
        "-Wextra",
        "-Werror",
        "-Wpedantic",
    ],
)

# HBF Simple binary
cc_binary(
    name = "hbf_simple",
    srcs = ["main.c"],
    deps = [
        ":http_bridge",
        ":qjs_runner",
        "//internal/core:log",
        "@civetweb//:civetweb",
    ],
    copts = [
        "-std=c99",
        "-Wall",
        "-Wextra",
        "-Werror",
        "-Wpedantic",
    ],
    linkopts = [
        "-static",
        "-Wl,--gc-sections",
        "-lpthread",
        "-lm",
        "-ldl",
    ],
)
