# Build tools

sh_binary(
    name = "lint",
    srcs = ["lint.sh"],
    visibility = ["//visibility:public"],
)

# Expose lint as a test so it runs under `bazel test //...`
sh_test(
    name = "lint_test",
    srcs = ["lint.sh"],
    tags = ["lint"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "db_to_c",
    srcs = ["db_to_c.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "sql_to_c",
    srcs = ["sql_to_c.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "inject_content",
    srcs = ["inject_content.sh"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "test_qjs",
    srcs = ["test_qjs.c"],
    deps = [
        "//hbf/shell:log",
        "//hbf/qjs:engine",
    ],
    visibility = ["//visibility:public"],
)

exports_files(["js_to_c.sh"])

# Integration test that boots the test pod binary and verifies endpoint status codes
sh_test(
    name = "integration_test",
    srcs = ["integration_test_runner.sh"],
    args = ["$(location //:hbf_test)"],
    data = [
        "//:hbf_test",
        "integration_endpoints_200.txt",
        "integration_endpoints_404.txt",
    ],
    timeout = "moderate",
    tags = ["local", "integration"],
    visibility = ["//visibility:public"],
)
