# Build tools

sh_binary(
    name = "lint",
    srcs = ["lint.sh"],
    visibility = ["//visibility:public"],
)

# Expose lint as a test so it runs under `bazel test //...`
sh_test(
    name = "lint_test",
    srcs = ["lint.sh"],
    tags = ["lint"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "db_to_c",
    srcs = ["db_to_c.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "sql_to_c",
    srcs = ["sql_to_c.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "inject_content",
    srcs = ["inject_content.sh"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "test_qjs",
    srcs = ["test_qjs.c"],
    deps = [
        "//hbf/shell:log",
        "//hbf/qjs:engine",
    ],
    visibility = ["//visibility:public"],
)

exports_files(["js_to_c.sh"])

cc_binary(
    name = "asset_packer",
    srcs = ["asset_packer.c"],
    deps = ["@miniz//:miniz"],
    copts = [
        "-std=c99",
        "-Wall",
        "-Wextra",
        "-Werror",
        "-Wpedantic",
        "-Wconversion",
        "-Wdouble-promotion",
        "-Wshadow",
        "-Wformat=2",
        "-Wstrict-prototypes",
        "-Wold-style-definition",
        "-Wmissing-prototypes",
        "-Wmissing-declarations",
        "-Wcast-qual",
        "-Wwrite-strings",
        "-Wcast-align",
        "-Wundef",
        "-Wswitch-enum",
        "-Wswitch-default",
        "-Wbad-function-cast",
    ],
    visibility = ["//visibility:public"],
)

sh_test(
    name = "asset_packer_deterministic_test",
    srcs = ["asset_packer_deterministic_test.sh"],
    data = [":asset_packer"],
    args = ["$(location :asset_packer)"],
    tags = ["local"],
    visibility = ["//visibility:public"],
)

# Integration test that boots the test pod binary and verifies endpoint status codes
sh_test(
    name = "integration_test",
    srcs = ["integration_test_runner.sh"],
    args = ["$(location //:hbf_test)"],
    data = [
        "//:hbf_test",
        "integration_endpoints_200.txt",
        "integration_endpoints_404.txt",
    ],
    timeout = "moderate",
    tags = ["local", "integration"],
    visibility = ["//visibility:public"],
)
