# Build tools

sh_binary(
    name = "lint",
    srcs = ["lint.sh"],
    visibility = ["//visibility:public"],
)

# Expose lint as a test so it runs under `bazel test //...`
sh_test(
    name = "lint_test",
    srcs = ["lint.sh"],
    tags = ["lint"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "sql_to_c",
    srcs = ["sql_to_c.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "inject_content",
    srcs = ["inject_content.sh"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "asset_packer",
    srcs = ["asset_packer.c"],
    deps = ["@zlib"],
    copts = [
        "-std=c99",
        "-Wall",
        "-Wextra",
        "-Werror",
        "-Wpedantic",
        "-Wconversion",
        "-Wdouble-promotion",
        "-Wshadow",
        "-Wformat=2",
        "-Wstrict-prototypes",
        "-Wold-style-definition",
        "-Wmissing-prototypes",
        "-Wmissing-declarations",
        "-Wcast-qual",
        "-Wwrite-strings",
        "-Wcast-align",
        "-Wundef",
        "-Wswitch-enum",
        "-Wswitch-default",
        "-Wbad-function-cast",
    ],
    visibility = ["//visibility:public"],
)

sh_test(
    name = "asset_packer_deterministic_test",
    srcs = ["asset_packer_deterministic_test.sh"],
    data = [":asset_packer"],
    args = ["$(location :asset_packer)"],
    tags = ["local"],
    visibility = ["//visibility:public"],
)

# Integration test - disabled for Phase 0 hypermedia migration
# sh_test(
#     name = "integration_test",
#     srcs = ["integration_test_runner.sh"],
#     args = ["$(location //:hbf)"],
#     data = [
#         "//:hbf",
#         "integration_endpoints_200.txt",
#         "integration_endpoints_404.txt",
#     ],
#     timeout = "moderate",
#     tags = ["local", "integration"],
#     visibility = ["//visibility:public"],
# )
