load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "hbf",
    embed = [":hbf_lib"],
    importpath = "hbf/cmd/hbf",
    visibility = ["//visibility:public"],
)

go_library(
    name = "hbf_lib",
    srcs = ["main.go"],
    importpath = "hbf/cmd/hbf",
    visibility = ["//visibility:private"],
)

load("@rules_go//go:def.bzl", "TOOLS_NOGO", "nogo")

nogo(
    name = "nogo",
    visibility = ["//visibility:public"],
    deps = [
        a
        for a in TOOLS_NOGO
        # Filter out shadow as it triggers on err and is very noisy.
        if a != "@org_golang_x_tools//go/analysis/passes/shadow:go_default_library"
    ],
)