load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "hbf",
    embed = [":hbf_lib"],
    importpath = "hbf/cmd/hbf",
    visibility = ["//visibility:public"],
)

go_library(
    name = "hbf_lib",
    srcs = ["main.go"],
    importpath = "hbf/cmd/hbf",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/input",
        "//internal/log",
        "//internal/nvim",
        "//internal/render",
        "//internal/ui",
    ],
)
