load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "neovim_lib",
    srcs = ["main.go"],
    embedsrcs = select({
        "@rules_go//go/platform:android": [
            "nvim_binary",
        ],
        "@rules_go//go/platform:linux": [
            "nvim_binary",
        ],
        "//conditions:default": [],
    }),
    importpath = "github.com/sdl2_bazel/go/neovim",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "neovim",
    embed = [":neovim_lib"],
    goos = "linux",
    goarch = "amd64",
    pure = "off",
    visibility = ["//visibility:public"],
)

# Copy the nvim binary as an embedded resource
genrule(
    name = "nvim_binary_rule",
    srcs = ["@neovim//:nvim_executable"],
    outs = ["nvim_binary"],
    cmd = "cp $< $@",
    visibility = ["//visibility:private"],
)
