# SPDX-License-Identifier: MIT
# Database management

# Export overlay schema for build-time application to fs.db
exports_files(["overlay_schema.sql"])

genrule(
    name = "overlay_schema_c",
    srcs = ["overlay_schema.sql"],
    outs = ["overlay_schema_gen.c"],
    cmd = "$(location //tools:sql_to_c) $(location overlay_schema.sql) $@",
    tools = ["//tools:sql_to_c"],
)

cc_library(
    name = "db",
    srcs = ["db.c"],
    hdrs = ["db.h"],
    deps = [
        ":overlay_fs",
        "//hbf/shell:log",
        "//third_party/sqlar",
        "@sqlite3//:sqlite3",
        # Note: In production builds, the binary links a specific pod's embedded library.
        # For this library to compile, we need access to fs_embedded.h.
        # The actual symbols come from whichever pod binary links this library.
    ],
    visibility = ["//visibility:public"],
)

# Versioned file system library (overlay_fs integration)
cc_library(
    name = "overlay_fs",
    srcs = ["overlay_fs.c"],
    hdrs = ["overlay_fs.h"],
    deps = [
        "//hbf/shell:log",
        "//third_party/sqlar",  # Needed for sqlar_uncompress during migration
        "@sqlite3//:sqlite3",
        "@zlib",  # Needed for asset bundle decompression
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "db_test",
    srcs = ["db_test.c"],
    deps = [
        ":db",
        "//:hbf_embedded",  # Use base pod's embedded library for testing
        "//pods/base:embedded_assets",  # Use base pod's asset bundle for testing
    ],
    linkstatic = 1,
)

cc_test(
    name = "overlay_test",
    srcs = ["overlay_test.c"],
    deps = [
        ":db",
        "//:hbf_embedded",  # Use base pod's embedded library for testing
        "//pods/base:embedded_assets",  # Use base pod's asset bundle for testing
    ],
    linkstatic = 1,
)

cc_test(
    name = "overlay_fs_test",
    srcs = [
        "overlay_fs_test.c",
        ":overlay_schema_gen.c",
    ],
    deps = [
        ":overlay_fs",
        "//hbf/shell:log",
        "@sqlite3//:sqlite3",
    ],
    linkstatic = 1,
)
