# HTTP server and routing

cc_library(
    name = "server",
    srcs = [
        "server.c",
        "handler.c",
    ],
    hdrs = [
        "server.h",
        "handler.h",
    ],
    copts = [
        "-Wno-cpp",  # Suppress libhttp sys/poll.h redirect warning from musl
    ],
    deps = [
        "//hbf/shell:log",
        "//hbf/db:db",
        "//hbf/qjs:engine",
        "//hbf/qjs:bindings",
        "//third_party/ews:libhttp_stubs",
        "@libhttp//:libhttp",
        "@sqlite3",
        "@quickjs-ng//:quickjs",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "server_test",
    srcs = ["server_test.c"],
    deps = [
        ":server",
        "//hbf/shell:log",
        "//hbf/db:db",
        "//hbf/qjs:engine",
        "//:hbf_embedded",
    ],
    linkstatic = 1,
)
