# HTTP server and routing

cc_library(
    name = "server",
    srcs = [
        "server.c",
        "handler.c",
    ],
    hdrs = [
        "server.h",
        "handler.h",
    ],
    deps = [
        "//hbf/shell:log",
        "//hbf/db:db",
        "//hbf/qjs:engine",
        "//hbf/qjs:bindings",
        "@civetweb//:civetweb",
        "@sqlite3",
        "@quickjs-ng//:quickjs",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "server_test",
    srcs = ["server_test.c"],
    deps = [
        ":server",
        "//hbf/shell:log",
        "//hbf/db:db",
        "//hbf/qjs:engine",
        "//pods/base:embedded_assets",  # Use base pod's asset bundle for testing
    ],
    linkstatic = 1,
)
