# HTTP server and routing

cc_library(
    name = "server",
    srcs = [
        "server.c",
    ],
    hdrs = [
        "server.h",
    ],
    deps = [
        "//hbf/shell:log",
        "//hbf/db:db",
        "@civetweb//:civetweb",
        "@sqlite3",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "server_test",
    srcs = ["server_test.c"],
    deps = [
        ":server",
        "//hbf/shell:log",
        "//hbf/db:db",
    ],
    linkstatic = 1,
)
