# QuickJS integration for HBF

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "engine",
    srcs = ["engine.c", "db_module.c", "console_module.c", "module_loader.c"],
    hdrs = ["engine.h", "db_module.h", "console_module.h", "module_loader.h"],
    deps = [
        "//hbf/shell:log",
        "@quickjs-ng//:quickjs",
        "//hbf/db:db",
        ":bindings",
    ],
)

cc_library(
    name = "bindings",
    srcs = [
        "bindings/request.c",
        "bindings/response.c",
    ],
    hdrs = [
        "bindings/request.h",
        "bindings/response.h",
    ],
    deps = [
        "//hbf/shell:log",
        "@civetweb//:civetweb",
        "@quickjs-ng//:quickjs",
    ],
)

cc_test(
    name = "engine_test",
    srcs = ["engine_test.c"],
    deps = [
        ":engine",
        "//hbf/shell:log",
        "//:hbf_embedded",  # Provide embedded symbols for db module (from base pod)
        "//pods/base:embedded_assets",  # Use base pod's asset bundle for testing
    ],
    linkstatic = 1,
)



