# Core utilities and foundational code

# Export main.c for pod_binary macro
exports_files(["main.c"])

cc_library(
    name = "hash",
    srcs = ["hash.c"],
    hdrs = ["hash.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "log",
    srcs = ["log.c"],
    hdrs = ["log.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "config",
    srcs = ["config.c"],
    hdrs = ["config.h"],
    deps = [":log"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "hash_test",
    srcs = ["hash_test.c"],
    deps = [":hash"],
    linkstatic = 1,
)

cc_test(
    name = "config_test",
    srcs = ["config_test.c"],
    deps = [":config"],
    copts = ["-Wno-cast-qual"],  # Test code needs to cast string literals
    linkstatic = 1,
)

cc_binary(
    name = "hbf",
    srcs = ["main.c"],
    deps = [
        ":config",
        ":log",
        "//hbf/db:db",
        "//hbf/http:server",
        "//hbf/qjs:engine",
        "@sqlite3",
    ],
    visibility = ["//visibility:public"],
)
