# User pod and henv management (Phase 2b)

cc_library(
    name = "manager",
    srcs = ["manager.c"],
    hdrs = ["manager.h"],
    deps = [
        "//internal/core:log",
        "//internal/db:db",
        "//internal/db:schema",
        "@sqlite3//:sqlite3",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "manager_test",
    srcs = ["manager_test.c"],
    deps = [":manager"],
    linkstatic = 1,
)
