# HTTP server and routing (Phase 1+)

cc_library(
    name = "server",
    srcs = ["server.c"],
    hdrs = ["server.h"],
    deps = [
        ":handler",
        "//internal/core:config",
        "//internal/core:log",
        "@civetweb//:civetweb",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "handler",
    srcs = ["handler.c"],
    hdrs = ["handler.h"],
    deps = [
        "//internal/core:log",
        "//internal/qjs:bindings",
    # pool removed
        "@civetweb//:civetweb",
        "@quickjs-ng//:quickjs",
    ],
    visibility = ["//visibility:public"],
)

